# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page-loader/scripts/: main.py
page_loader/: __init__.py  cli.py  download.py  file_saver.py  html_parser.py  loader.py  logger.py
page_loader/scripts/: main.py  start_page_loader.py
tests/: conftest.py  download_page.py  test_download_page.py
tests/fixtures/: file1.html  script.js  style.css
