[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-loader"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]
repository = "https://github.com/AdrianusWest/python-project-lvl3"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Natural Language :: English",
  "Environment :: Console"
]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
urllib3 = "^1.26.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
progress = "^1.6"
requests-mock = "^1.9.3"
coverage = "^6.4.1"
testresources = "^2.0.1"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.start_page_loader:main"
