[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-loader"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]
repository = "https://github.com/AdrianusWest/python-project-lvl3"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Natural Language :: English",
  "Environment :: Console"
]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
urllib3 = "^1.26.10"
requests = "^2.28.1"
progress = "^1.6"
requests-mock = "^1.10.0"
coverage = "^6.4.1"
testresources = "^2.0.1"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^0.6.0"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^2.0.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.4.0"
flake8-import-order = "^0.18.1"
flake8-mutable = "^1.2.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.start_page_loader:main"