[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-loader"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]
repository = "https://github.com/AdrianusWest/python-project-lvl3"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Natural Language :: English",
  "Environment :: Console"
]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.11.3"
PyYAML = "^6.0"
urllib3 = "^2.0.4"
requests = "^2.31.0"
progress = "^1.6"
requests-mock = "^1.11.0"
coverage = "^7.3.0"
testresources = "^2.0.1"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-mutable = "^1.2.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.start_page_loader:main"